merged in trunk